# wellplate_analysis

./: LICENSE  README.md  calibration.py  cli.py  example_xlsx  io.py  processing.py  pyproject.toml
example_config/: example_yaml.yaml
wellplate_analysis/: __init__.py  calibration.py  cli.py  plotting.py  run_pipeline.py
wellplate_analysis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
