```toml
[project]
name = "wellplate_analysis"
version = "0.1.0"
description = "Modular config-driven well plate analysis pipeline and tools"
authors = [
  { name = "Luca Lippert", email = "llippert.uoregon.edu" }
]

readme = "README.md"
requires-python = ">=3.9"

dependencies = [
[
    "pandas>=2.3.3",
    "numpy>=1.26.4",
    "scipy>=1.16.2",
    "matplotlib>=3.5.3",
    "openpyxl>=3.1.2",
    "pyyaml>=6.0.2"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
