```toml
[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wellplate_analysis"
version = "0.1.0"
description = "Analysis pipeline for plate reader fluorescence and OD data"
authors = [
    { name="Your Name", email="you@example.com" }
]
dependencies = [
[
    "pandas>=2.3.3",
    "numpy>=1.26.4",
    "scipy>=1.16.2",
    "matplotlib>=3.5.3",
    "openpyxl>=3.1.2",
    "pyyaml>=6.0.2"
]
